Bug 424599 - Line chart monitor widgets not displayed in small panels with Intel graphics
Summary: Line chart monitor widgets not displayed in small panels with Intel graphics
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: System Monitor widgets (other bugs)
Version First Reported In: 5.20.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-24 08:18 UTC by Nicola Mori
Modified: 2020-11-11 10:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicola Mori 2020-07-24 08:18:29 UTC
SUMMARY
I tried to create a small panel with a CPU monitor widget with line style. The widget is not displayed if the panel height is small (<= 160). This happens on one of my machines with Intel graphics (kernel 5.7.9 + xf86-video-intel 1:2.99.917+908+g7181c5a4), but on another one with NVidia graphics (using the proprietary NVidia driver version 340.108) the error is not present, so I guess it might be an issue with Intel graphics.



STEPS TO REPRODUCE
1. Create a panel
2. Add a Total CPU Use monitor widget to the panel and set the style to line
3. Change the height of the panel 

OBSERVED RESULT
If the panel height is equal or less than 160 then the widget is not displayed.

EXPECTED RESULT
The widget should be scaled and displayed also for panel height <= 160.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Archlinux
(available in About System)
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72
Qt Version: 5.15.0
Comment 1 Nicola Mori 2020-08-04 06:52:24 UTC
The bug is still present in 5.19.4.
Comment 2 Nicola Mori 2020-10-08 06:30:34 UTC
Still present in 5.19.5.
Comment 3 Nicola Mori 2020-10-14 06:53:04 UTC
The issue is still present in 5.20.0, although the behavior has improved slightly. Adding a cpu monitor widget to a small panel (height ~ 50) it is correctly displayed in the default bar chart setting. Changing the visualization to line chart make it disappear, and setting the panel height > 160 does not help. But by resizing the panel many times the line chart suddenly appeared, and remained visible also by setting the height to 30. However, I have not been able to reproduce the result with a second cpu monitor, no matter how many times I resized the panel. Furthermore, during these resize trials, at a given point the first sensor started to show level lines, which it didn't show before even at maximum height.
All in all, there's a lot of apparently random behavior with this system monitor widget introduced in Plasma 5.19 (another example is the display style selector menu that randomly gets blocked), and it's a pity that they are still not solved  in version 5.20.
Comment 4 Nicola Mori 2020-10-21 06:33:05 UTC
Still present in 5.20.1. A panel height less or equal than 160 makes the line chart widget disappear.
Comment 5 Nicola Mori 2020-10-28 07:47:56 UTC
Still present in 5.20.2 with frameworks 5.75.0.
Comment 6 Nicola Mori 2020-11-11 07:41:52 UTC
The bug is still present in 5.20.3.
Comment 7 David Redondo 2020-11-11 10:07:09 UTC
Does it work after restarting plasma? I can see that switching styles sometimes does not work but also on nvidia and intel
Comment 8 Bug Janitor Service 2020-11-11 10:27:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/95
Comment 9 David Redondo 2020-11-11 10:35:17 UTC
Git commit 04e96f665151690e96d225b39e20d07d4a25a791 by David Redondo.
Committed on 11/11/2020 at 10:26.
Pushed by davidre into branch 'master'.

Delete compactRepresentation when switching faces

Fixes a copy and paste error

M  +1    -1    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/04e96f665151690e96d225b39e20d07d4a25a791
Comment 10 David Redondo 2020-11-11 10:36:16 UTC
Git commit 0eb3e56e70300fe5990529045d93c0930e9d9330 by David Redondo.
Committed on 11/11/2020 at 10:36.
Pushed by davidre into branch 'Plasma/5.20'.

Delete compactRepresentation when switching faces

Fixes a copy and paste error


(cherry picked from commit 04e96f665151690e96d225b39e20d07d4a25a791)

M  +1    -1    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/0eb3e56e70300fe5990529045d93c0930e9d9330
Comment 11 Nicola Mori 2020-11-11 10:49:20 UTC
(In reply to David Redondo from comment #7)
> Does it work after restarting plasma? I can see that switching styles
> sometimes does not work but also on nvidia and intel

Yes, adding a cpu monitor widget with line style to the panel and then restarting plasma it works. Thanks for the suggestion.

I think that with this workaround and the patch this report can be closed.