Delete compactRepresentation when switching faces

Fixes a copy and paste error
BUG:424599